--- a/documentation/SystemDesign/Design.tex
+++ b/documentation/SystemDesign/Design.tex
@@ -85,10 +85,9 @@
 SmartServe is an autonomous table tennis training system for table tennis players with various skill levels. SmartServe aids in diagnosing and improving a player's performance over time. The system trains table tennis players by shooting table tennis balls towards the player and detects successful returns from the player. The system can further adapt to the player's weaknesses and help them overcome it through further training. Importantly, SmartServe alleviates the problems of finding and working with a coach for players, as well as coaches trying to train multiple players simultaneously. The system will be deemed a success if the table tennis players and coaches can enjoy and see some value added by using SmartServe.\\\\
 The project started at the beginning of the Fall 2017 academic term and will conclude at the end of the Winter 2018 term. In addition, the core project team consists of final year Software and Mechatronics Engineering students who are enrolled in the MECHTRON 4TB6/SFWRENG 4G06 capstone project course.
 \subsection{Document Overview}
-The purpose of this document is to provide an overview of the system design which meets the system requirements as specified in the \href{run:../Requirements/Requirements.pdf}{Requirements Document}. This means the system will be decomposed into subsystems which each have their own responsibilities and design. The subsystems will have their intended input, expected output and description of how the module will be used. In further documentation, each will be designed in a way which is abstracted from this document's perspective. The expected use cases will also be detailed to understand the expectations of the user and how each subsystem interacts with one another. A more detailed view of this including timing as a factor will be detailed in the Sequence Diagram section. \\ \\ % TODO LINK EVERYTHING
+The purpose of this document is to provide an overview of the system design which meets the system requirements as specified in the \href{run:../Requirements/Requirements.pdf}{Requirements Document}. The system will be decomposed into subsystems, where each has responsibilities and is designed to fufill certain requirements. The subsystems will have their intended input, expected output and description of how the module will be used. In further documentation, each will be designed in a way which is abstracted from this document's perspective. The expected use cases will also be detailed to understand the expectations of the user and how each subsystem interacts with one another. A more detailed view of this including timing as a factor will be detailed in the Sequence Diagram section. \\ \\ % TODO LINK EVERYTHING
 For each subsystem, its purpose will be defined with respect to the overall system. After doing so, detailed input and output parameters will be defined. How each subsystem is architected is out of scope for this document and will be defined in further documentation. \\ \\
-To finish the document, each subsystem will be responsible for implementing some set of requirements which can be found \href{run:../Requirements/Requirements.pdf}{here}.
-In the ideal scenario, one subsystem will be the only one which is responsible for any one requirement but may not be the case for all the requirements.
+
 \subsection{Naming Conventions and Terminology}
 \label{sec:definitions}
 The following terms and definitions will be used throughout this document:
@@ -97,13 +96,14 @@ The following terms and definitions will be used throughout this document:
 \item \textbf{ACID}: a database transaction which is atomic, consistent, isolated and durable
 \item \textbf{CV}: computer vision
 \item \textbf{FPS}: frames per second
+\item \textbf{FSM}: finite state machine, shows transitions between states
 \item \textbf{GUI}: graphical user interface
-\item \textbf{HTTP:} hypertext transfer protocol
+\item \textbf{HTTP}: hypertext transfer protocol
 \item \textbf{Pitch}: rotation along the y-axis; this rotation angle primarily dictates the range of the ball from the net to the edge of the table on the user side
 \item \textbf{Roll}: rotation along the x-axis
-\item \textbf{Shooting Mechanism}: refers to the part of the system that shoots the table tennis balls towards the user side (player). Please refer to Figure \ref{fig:table-tennis-top-view} for visual illustration.
-\item \textbf{System Side}: the side of the table where the electromechanical system is placed; it is the opposite side of the User Side. Please refer to Figure \ref{fig:table-tennis-top-view} for visual illustration.
+\item \textbf{Shooting Mechanism}: refers to the part of the system that shoots the table tennis balls towards the user side (player) Please refer to Figure \ref{fig:table-tennis-top-view} for visual illustration
 \item \textbf{System}: encompasses both the hardware and software parts of SmartServe
+\item \textbf{System Side}: the side of the table where the electromechanical system is placed; it is the opposite side of the User Side Please refer to Figure \ref{fig:table-tennis-top-view} for visual illustration
 \item \textbf{TCP:} transmission control protocol
 \item \textbf{Team}: all team members of the core capstone project, as noted in the list of Authors
 \item \textbf{User Side}: the side of the table where the user (player) is standing
@@ -117,7 +117,7 @@ The following terms and definitions will be used throughout this document:
    \label{fig:table-tennis-top-view}
 \end{figure}
 \subsection{Project Scope}
-The system will only attempt to shoot balls from the shooting mechanism straight towards the user side. Importantly, the system will not attempt to return any shots from the user. After the user has returned a shot, the Computer Vision (CV) subsystem will be utilized to determine if the user's shot lands on the table or not. Additionally, the characteristics of the shot following any return will be determined by the system's mode and the proficiency of the player if available.
+The system will only attempt to shoot balls from the shooting mechanism straight towards the user side. Notably, the system will not attempt to return any shots from the user. After the user has returned a shot, the Computer Vision (CV) subsystem will be utilized to determine if the user's shot lands on the table or not. Additionally, the characteristics of the shot following any return will be determined by the system's mode and the proficiency of the player if available.
 \section{System Description}
 \subsection{System Architecture}
 The system will follow a service-oriented architecture. This means that a central subsystem will interface with several services that serve a single purpose. Some subsystems will be simply told what needs to be done and others will be asked for some return value. This is done to implement separation of concerns where one subsystem doesn't know everything about the system and only what is necessary to satisfy their requirements. It also allows for easy increments of versioning, where one subsystem can be used as long as it is functional and easily swapped out for a newer version with extra features or increased performance. Moreover, this system has heavy timing constraints and an unpredictable environment so some actions must be taken in absence of a service's response. For example, the computer vision may take longer to track a ball depending on its trajectory where the system must shoot another ball in order to keep the user engaged.
@@ -128,7 +128,18 @@ The system will follow a service-oriented architecture. This means that a centra
 \subsubsection{Controlled Variables}
 
 \subsection{Subsystems}
-The system will be broken down into the subsystems with the following purposes: general managing of subsystems, computer vision to detect returns, shot recommendation, modelling the shot's trajectory, optimizing the distance travelled by the shooting mechanism, storing the data, taking input and output from the user and shooting the ball toward the user. The diagram for this breakdown can be found in Figure \ref{fig:sub}.
+The system will be broken down into subsystems with the following purposes: 
+\begin{itemize}
+\item \textbf{SmartServe}: general management of subsystems
+\item \textbf{Computer Vision}:  detection of returns
+\item \textbf{Shooting Mechanism}:  shooting the ball toward the user
+\item \textbf{Shot Recommendation}: provides best shot
+\item \textbf{Data Store}: storing the data
+\item \textbf{Shooting Model}: modelling the shot's trajectory
+\item \textbf{Shot Optimizer}: optimizing the distance travelled by the shooting mechanism
+\item \textbf{User Interface}: taking input from the user and showing output
+\end{itemize}
+The diagram for this breakdown can be found in Figure \ref{fig:sub}.
 \begin{figure}[H]
    \centering
    \includegraphics[width=0.6\textwidth]{img/Subsystem.png} % requires the graphicx package
@@ -144,7 +155,7 @@ The diagram including all use cases can be found in Figure \ref{fig:usecase}. Th
    \label{fig:usecase}
 \end{figure}
 \subsubsection{Start Training}
-The user interface will have ways to allow the user to start this action which makes the Smart Serve subsystem prepare for a shot to shoot towards the user. To do this, it needs to request a shot to use from the Shot Recommendation subsystem. This will be in the form of a desired location on the table, the speed of the shot and the angular velocity of the ball. The Smart Serve subsystem can then use the Shooting Model to translate this information into pitch, yaw and angular velocity to shoot the ball so it matches the desired shot. The Smart Serve subsystem can then use the Shooting Mechanism's current position and the desired shot to request the optimal position to shoot the ball using the Shot Optimizer. After doing so, it will instruct the shooting mechanism to shoot the ball in the desired way and start the CV subsystem to begin tracking for a successful return. Only until the CV subsystem returns the pass or failed return data, can it update the Data Storage and Shot Recommendation subsystems with this new information. The former will store the result and the data for the shot together, where the latter will update the model used to generate shot recommendations. After doing all this, it can begin preparing for a new shot.
+The user interface will have ways to allow the user to start this action which makes the Smart Serve subsystem prepare for a shot to shoot towards the user. To do this, it needs to request a shot to use from the Shot Recommendation subsystem. The shot includes the following parameters: desired location on the table, the speed of the shot and the angular velocity of the ball. The Smart Serve subsystem can then use the Shooting Model to translate this information into pitch, yaw and angular velocity to shoot the ball so it matches the desired shot. The Smart Serve subsystem can then use the Shooting Mechanism's current position and the desired shot to request the optimal position to shoot the ball using the Shot Optimizer. After doing so, it will instruct the shooting mechanism to shoot the ball in the desired way and start the CV subsystem to begin tracking for a successful return. Only until the CV subsystem returns the pass or failed return data, can it update the Data Storage and Shot Recommendation subsystems with this new information. The former will store the result and the data for the shot together, where the latter will update the model used to generate shot recommendations. After doing all this, it can begin preparing for a new shot.
 \begin{figure}[H]
    \centering
    \includegraphics[width=\textwidth]{img/SequenceDiagram-Start.png}
@@ -152,7 +163,7 @@ The user interface will have ways to allow the user to start this action which m
    \label{fig:start}
 \end{figure}
 \subsubsection{Stop Training}
-In the event the user wants to cease training, the user interface will allow this and will halt the system from shooting balls. No data should be written or shots requested for the shooting mechanism to shoot in order to preserve the integrity of the data the system gathers.
+In the event the user wants to cease training, the user interface will allow this and will halt the system from shooting balls. No data should be written nor shots requested for the shooting mechanism to shoot in order to preserve the integrity of the data the system gathers.
 \begin{figure}[H]
    \centering
    \includegraphics[width=\textwidth]{img/SequenceDiagram-Stop.png}
@@ -160,7 +171,7 @@ In the event the user wants to cease training, the user interface will allow thi
    \label{fig:stop}
 \end{figure}
 \subsubsection{View Results}
-When the user wants to visualize the results of their performance, the user interface will allow this action to begin. It will use the Smart Serve subsystem to query data from data storage and present it in some meaningful way.
+When the user wants to visualize the results of their performance, the user interface should be used. It will use the Smart Serve subsystem to query data from data storage and present it in some meaningful way.
 \begin{figure}[H]
    \centering
    \includegraphics[width=\textwidth]{img/SequenceDiagram-View.png}
@@ -176,7 +187,7 @@ The system may need to be adjusted for various lighting, table sizes or environm
    \label{fig:tune}
 \end{figure}
 \subsubsection{Start System}
-The user interface will allow the system to be booted where it starts the Smart Serve subsystem. This will read allow the Shot Recommendation system to build its model based on previous data for the user, if it exists.
+The user interface will allow the system to be booted which will start the Smart Serve subsystem. This will allow the Shot Recommendation system to build its model based on previous data for the user, if it exists.
 \begin{figure}[H]
    \centering
    \includegraphics[width=\textwidth]{img/SequenceDiagram-Boot.png}
@@ -185,16 +196,16 @@ The user interface will allow the system to be booted where it starts the Smart 
 \end{figure}
 
 \subsection{Behaviour Description}
-As the behaviour of the system has been discussed previously, this section will describe the expected user behaviour and how they would interact with the system.
+As the behaviour of the system has been discussed previously, this section will describe the expected user behaviour and how they will interact with the system.
 \subsubsection{Normal Operation}
-The trainee would begin by starting the system from its off state. This will trigger the Start System use case and allow the Smart Serve system to boot and the Shot Recommendation System to boot and build a model to recommend shots. The user will then trigger the Start Training use case and specify a training mode. This creates the loop of Smart Serve prepping and serving shots for the user. Only until the user starts the Stop System use case will this loop stop during normal operation. Either during training or after, a user can start the View Data use case to get details on their performance.
+The trainee would begin by starting the system from its off state. This will trigger the Start System use case. The user will then trigger the Start Training use case and specify a training mode. This creates the loop of Smart Serve prepping and serving shots for the user. Only until the user triggers the Stop System use case will this loop stop during normal operation. During or after training a user can start the View Data use case to get details on their performance.
 \subsubsection{Abnormal Operation}
-Although possible, there are some actions a user could take which would be considered abnormal. If a user hits the ball and it immediately leaves the viewable area of the computer vision, whether it never returns or does so after 1.5 seconds, it should be considered a failed return. A user could replace the table with a different one without calibrating the system to the new table. The user could also misplace the system such that it is not centre with the table or at the edge of the table. The proper placement can be found in Figure \ref{fig:table-tennis-top-view}. The system will require the user to load the balls into the shooting mechanism's hopper which will need to be a particular size and colour to work optimally.
+Although possible, there are some actions a user could take which would be considered abnormal. If a user hits the ball and it immediately leaves the viewable area of the computer vision, whether it never returns or does so after 1.5 seconds, it should be considered a failed return. A user could also replace the table with a different one without calibrating the system to the new table. Furthermore, the user could misplace the system such that it is not centre with the table or at the edge of the table. The proper placement can be found in Figure \ref{fig:table-tennis-top-view}. The system will require the user to load the balls into the shooting mechanism's hopper which will need to be a particular size and colour to work optimally.
 \subsubsection{Error Handling}
 If the system should encounter an error, it should display the details of it through the User Interface subsystem. In addition to this, it must take measures to ensure the safety of the user and integrity of the system. This includes stopping all training and pending actions for the system to perform. For example, an error could be a jammed table tennis ball or the system has run out of balls to use.
 \section{Subsystems Overview}
 \subsection{Smart Serve}
-The Smart Serve subsystem will provide the means of interfacing with all the subsystems and enforcing timing constraints. For all intents and purposes, it can be considered the main process and hub of the system. In the event a subsystem is taking too long to respond, this subsystem must be able to continue operation to meet timing requirements. The various states and transitions can be found in Figure \ref{fig:fsm}. The FSM diagram shows each state should have an \textit{exit option} if a service takes longer than allowed to preform an action.
+The Smart Serve subsystem will provide the means of interfacing with all the subsystems and enforcing timing constraints. For all intents and purposes, it can be considered the main process and hub of the system. In the event a subsystem is taking too long to respond, this subsystem must be able to continue operation to meet timing requirements. The various states and transitions can be found in Figure \ref{fig:fsm}. The FSM(Finite State Machine) diagram shows each state should have an \textit{exit option} if a service takes longer than allowed to preform an action.
 \begin{figure}[H]
    \centering
    \includegraphics[width=0.7\textwidth]{img/FSM.png}
@@ -203,7 +214,7 @@ The Smart Serve subsystem will provide the means of interfacing with all the sub
 \end{figure}
 
 \subsection{Computer Vision}
-The Computer Visions subsystem will be a service to the Smart Serve subsystem to determine if a shot is successfully returned. When sent a request to begin tracking the ball, it will do so and return a true or false when the ball bounces off the table or it doesn't. In the event the ball never enters frame, it will assume the return was failed after a fixed amount of time.
+The Computer Vision subsystem will be a service to the Smart Serve subsystem to determine if a shot is successfully returned. When sent a request to begin tracking the ball, it will do so and return a true when the ball bounces off the table or false when it doesn't. In the event the ball never enters frame, it will assume the return was failed after a fixed amount of time.
 \begin{figure}[H]
    \centering
    \includegraphics[width=0.4\textwidth]{img/cvFSM.png}
@@ -214,7 +225,7 @@ The Computer Visions subsystem will be a service to the Smart Serve subsystem to
 The Shot Recommendation subsystem will be a service to the Smart Serve subsystem to determine which shot should be taken next. The way the subsystem decides on the shot will be determined by the training mode the user selects. These will include shooting the same shot every time, pseudo-randomly picking a shot or using reinforcement learning algorithms to decide the next shot. The last mode will be based on previous performance by the user.
 
 \subsection{Shooting Model}
-The Shooting Model subsystem will be a service to the Smart Serve subsystem which provides the means of mapping a desired shot to the details needed to take the shot. The input and output for the system can be found in Figure \ref{fig:shotmodel}. The output will be many combinations of pitch, yaw, speed and angular velocity that satisfy the input shot details.
+The Shooting Model subsystem will be a service to the Smart Serve subsystem which provides the means of mapping a desired shot to the details needed to take the shot. The input and output for the system can be found in Figure \ref{fig:shotmodel}. The output will be an array of many combinations of pitch, yaw, speed and angular velocity that satisfy the input shot details.
 \begin{figure}[htbp]
    \centering
    \includegraphics[width=0.6\textwidth]{img/ShotModel.png} % requires the graphicx package
